--- a/nosotros.html
+++ b/nosotros.html
@@ -83,7 +83,7 @@
             <div class="carousel-item">
                     <div class="user col-md-8">
                         <div class="user_image">
-                            <img src="assets/images/team2.jpg" alt="">
+                            <img src="assets/images/whatsapp-image-2021-09-01-at-11.43.38-400x515.jpg" alt="">
                         </div>
                         <div class="user_text mb-4">
                             <p class="mbr-fonts-style display-5"><strong>
@@ -96,7 +96,7 @@
                 </div><div class="carousel-item">
                     <div class="user col-md-8">
                         <div class="user_image">
-                            <img src="assets/images/team2.jpg">
+                            <img src="assets/images/whatsapp-image-2021-09-01-at-11.43.26-400x396.jpg" alt="">
                         </div>
                         <div class="user_text mb-4">
                             <p class="mbr-fonts-style display-5">
@@ -197,7 +197,7 @@
     <div class="container">
         <div class="row content-wrapper justify-content-center">
             <div class="col-lg-3 offset-lg-1 mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="OTMTy4J7FCEq0cik1am3GCJKFllPHAyz9nBFl2f9Gj0y33ai9w1SK+Ah0W6mxB5Np2HULhvlNgJZDz3LGCPULfPmehxGjoK3GRO0uw9eR0OEOLMfgjmhvM0eV1EQCj2K">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="uU2syVbm3cs8a5WRbfVx5I6qE3wwLPrPDn/eRschJ2kf75nyphNH4yy8tFhsaLFhvVJawYp8ykEIysMGD7qdz30hwHvT6OJhGGxfrLTm77ICSfo5gFExYQ5DxU5CjatK">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling
                             out the form!</div>
@@ -225,7 +225,7 @@
             </div>
             <div class="col-lg-7 offset-lg-1 col-12">
                 <div class="image-wrapper">
-                    <img class="w-100" src="assets/images/sq3.jpg" alt="Mobirise">
+                    <img class="w-100" src="assets/images/fotoclg59-1200x675.jpg" alt="Mobirise">
                 </div>
             </div>
         </div>
@@ -248,7 +248,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/x" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built with Mobirise <a href="https://mobirise.site/j" style="color:#aaa;">site</a> builder</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-testimonials-slider/mbr-testimonials-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/t" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/r" style="color:#aaa;">The site</a> was made with Mobirise template</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/mbr-testimonials-slider/mbr-testimonials-slider.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
